# clickhouse-proxy

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  DOCKER_USAGE.md  Dockerfile  MODULE.bazel  Makefile  README.md  README_AUTH.md  REPORT.md  auth_ck.yaml  ck_remote_proxy  client_integration_test.go  config.go  config_test.go  dashboard.json  go.mod  go.sum  integration_test.go  jwk_proxy_config.json  main.go  metrics_design.md  observer.go  proxy.go  proxy_signature_test.go  proxy_test.go  users.xml  validator.go  validator_test.go
demo/: main.go  run_demo.sh  stop_demo.sh
k8s/: DEPLOY.md  clickhouse-proxy-podmonitor.yaml
k8s/test-clickhouse-proxy-extra-usage-0-0-0/: configmap.yaml  service.yaml  statefulset.yaml
k8s/test-clickhouse-proxy-extra-usage-0-1-0/: configmap.yaml  service.yaml  statefulset.yaml
k8s/test-clickhouse-proxy-test-part-a/: configmap.yaml  service.yaml  statefulset.yaml
k8s/test-clickhouse-proxy-test-part-a-0/: configmap.yaml  service.yaml  statefulset.yaml
k8s/test-clickhouse-proxy-test-part-a-1/: configmap.yaml  service.yaml  statefulset.yaml
k8s/test-clickhouse-proxy-test-part-b/: configmap.yaml  service.yaml  statefulset.yaml
k8s/test-clickhouse-proxy-test-part-b-0/: configmap.yaml  service.yaml  statefulset.yaml
local/: ck-a-config.xml  ck-b-config.xml  proxy-a.json  proxy-b.json
tests/: auth_config.json  run_auth_load_test.sh  run_auth_test.sh  run_stream_replay.sh  run_tests.sh  stream_config.json  test_mock_direct.sh
tests/auth_test_client/: main.go
tests/auth_test_driver/: main.go
tests/load_client/: main.go
tests/mock_server/: main.go
tests/signature/: signature_test.go
tests/simple_client/: main.go
tests/stream_client/: main.go
